# fivem-toolkit

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  FIVEM_SUPPORTED_FORMATS.md  KNOWN_LIMITATIONS.md  LICENSING_ARCHITECTURE.md
src/: App.css  App.tsx  index.css  store.ts  translations.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dependency_scanner.rs  errors.rs  exporter.rs  lib.rs  meta_fixer.rs  scanner.rs  storage.rs  stream_analyzer.rs  vehicle_editor.rs  vehicle_extractor.rs  vehicle_merger.rs  ytd_parser.rs
src-tauri/tests/: integration_tests.rs
src-tauri/ytd-optimizer/: ytd-optimizer.csproj  ytd_optimizer.cs
src/components/: Sidebar.tsx  Titlebar.tsx
src/pages/: BuildExport.tsx  Dashboard.tsx  DependencyScanner.tsx  MetaFixer.tsx  PackBrowser.tsx  Settings.tsx  StreamAnalyzer.tsx  TextureOptimizer.tsx  VehicleEditor.tsx  VehicleMerger.tsx
test_fixtures/sample_vehicle/: fxmanifest.lua
test_fixtures/sample_vehicle/stream/: testcar.yft  testcar_hi.yft
test_fixtures/sample_vehicle2/: fxmanifest.lua
test_fixtures/sample_vehicle2/stream/: sportscar.yft
